fixed uneven height of the search button

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ p{
 
 .btn{
     cursor: pointer;
-    padding: 13px 15px;
+    padding: 15px 15px;
     border-radius: 50%;
     border: none;
     background-color: #888888;
